[gd_scene load_steps=7 format=3 uid="uid://ccm0r6n0e8q8e"]

[ext_resource type="Script" path="res://codings/transfer_zone.gd" id="1_6swgh"]
[ext_resource type="Texture2D" uid="uid://bhbfk3uk3pfej" path="res://UI/Party/Cursor.png" id="2_as2d5"]
[ext_resource type="Texture2D" uid="uid://bnv6qqf87t008" path="res://art/Icons/Editor/transfer.png" id="3_2ktml"]
[ext_resource type="Script" path="res://codings/Interactions/editor_only.gd" id="4_f1rhf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vr85b"]
size = Vector2(92.4443, 84.0007)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h8txy"]
size = Vector2(39, 85)

[node name="Transfer" type="Area2D"]
position = Vector2(766.116, 508.825)
collision_layer = 15
collision_mask = 15
script = ExtResource("1_6swgh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.116028, 0.174988)
shape = SubResource("RectangleShape2D_vr85b")
debug_color = Color(0.294118, 0.611765, 0.427451, 0.419608)

[node name="Preview" type="Area2D" parent="."]
z_as_relative = false
collision_layer = 15
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="Preview"]
position = Vector2(63.384, 0.174988)
shape = SubResource("RectangleShape2D_h8txy")
debug_color = Color(0.968627, 0, 0.47451, 0.419608)

[node name="Cursor" type="TextureRect" parent="."]
visible = false
light_mask = 0
z_index = 10
offset_left = 24.8838
offset_top = -4.82495
offset_right = 72.8838
offset_bottom = 87.175
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_as2d5")

[node name="Icon" type="Sprite2D" parent="."]
light_mask = 0
z_index = 10
position = Vector2(27.884, 0.174984)
scale = Vector2(0.351786, 0.351786)
texture = ExtResource("3_2ktml")
script = ExtResource("4_f1rhf")

[connection signal="body_entered" from="." to="." method="_on_entered"]
[connection signal="body_entered" from="Preview" to="." method="_on_preview_entered"]
[connection signal="body_exited" from="Preview" to="." method="_on_preview_exited"]
